# anifetch

./: .envrc  .gitignore  README.md  anifetch-cli  anifetch-static-resize2.sh  anifetch.py  benchmark.py  example-config.conf  flake.nix  install.sh  loop-anifetch.sh  pyproject.toml  pyrefly.toml  ruff.sh  test.py  testing.md
.github/: FUNDING.yml
.github/workflows/: ruff.yaml
anifetch/: __init__.py  __main__.py  cli.py  core.py  utils.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
nix/: package.nix
prime/usr/share/cmake/VulkanHeaders/: VulkanHeadersConfigVersion.cmake
scripts/: ffmpeg-env.sh
snap/: snapcraft.yaml
src/anifetch/: __init__.py  __main__.py  anifetch-static-resize2.sh  ansi2txt.py  ansi_process.py  ansi_process2.py  cli.py  core.py  keyreader.py  renderer.py  utils.py
stage/meta.ffmpeg-2404-sdk/: snap.yaml
stage/snap.ffmpeg-2404-sdk/: manifest.yaml  snapcraft.yaml
stage/usr/include/avisynth/avs/: version.h
stage/usr/share/doc/gcc-15-base/: copyright
stage/usr/share/doc/libabsl20230802/: copyright
stage/usr/share/doc/libaom3/: copyright
stage/usr/share/lintian/overrides/: libabsl20230802
stage/usr/share/pkgconfig/: shared-mime-info.pc
tools/: benchmark.py
