# TODO: publish on pypi

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anifetch-cli"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Terminals",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = [
    "fetch",
    "terminal",
    "cli",
    "animated",
    "neofetch",
    "fastfetch",
    "anifetch",
]
version = "1.0.0"
description = "Animated terminal fetch with video and audio support."
# If I put everyone here it messes with the "author" meta section.
authors = [{ name = "Notenlish", email = "notenlish@gmail.com" }]
maintainers = [
    # If I make it start with immelancholy for some reason it uses gallophostix's gmail for immelancholy.
    { name = "Gallophostrix", email = "gallophostrix@gmail.com" },
    { name = "Immelancholy" },
    { name = "Notenlish", email = "notenlish@gmail.com" },
]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["platformdirs", "wcwidth", "rich", "pynput"]

[project.urls]
Homepage = "https://github.com/Notenlish/anifetch"
Issues = "https://github.com/Notenlish/anifetch/issues"

[project.scripts]
anifetch = "anifetch.__init__:main"
anifetch-cli = "anifetch.__init__:main"

[tool.setuptools]
packages = ["anifetch"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
anifetch = ["assets/**/*"]
